--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 repository: sproogen/resume-theme
-favicon: images/cv.png
+favicon: images/user.ico
 
 # Content configuration version
 version: 2
