--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ instagram_username: lieiev
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/123.jpg
 about_content: | # this will include new lines to allow paragraphs
   Solve unique tasks related to the <mark>maintenance</mark> and use of <mark>mechanized technologies</mark> of production, primary processing, storage and transportation of agricultural products. Expert management of mechanized technological processes and production units that provide technical support for an agro-industrial enterprise, with a proven record of elimination of failures.
   
