--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ content:
         title: Lariagra Farms  Ltd, AB, Canada
         link: https://www.sunterrafarms.ca/
         link_text: sunterrafarms.ca
-        sub_title: Specialized livestock worker
+        sub_title: Farrowing Technician
         caption: August 2021 – Present 
         description: | # this will include new lines to allow paragraphs
            * Provide agricultural livestock services such as artificial insemination, assisting pregnant sows and sorting new-borns
