--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ content:
       - 300 hours of operating a tractor Arion 620c and Kubota M9540 & 3-ton manual truck
       - Standard First Aid Level C CPR certificate
       - Fluent in English, Russian and Ukrainian
-      - Cumputer: MS Office (Word, Excel, PowerPoint), Internet and email
+      - Computer: MS Office (Word, Excel, PowerPoint), Internet and email
 
 
 # Footer
