--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ content:
   - title: ADDITIONAL SKILLS
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Driver Licence Class 5 (AB) and wons a vehicle
+      - Driver Licence Class 5 (AB) and owns a vehicle
       - 500 hours of  operating a telehandler MLT-X732 and MLT-526 & skid steer loader 226B 
       - 300 hours of operating a tractor Arion 620c and Kubota M9540 & 3-ton manual truck
       - Standard First Aid Level C CPR certificate
