--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ content:
         sub_title: Field Technician / Vac Truck Driver
         caption: July 2023 – Present 
         description: | # this will include new lines to allow paragraphs
-           •	Set up, service, repair and maintain rental fleet
-           •	Shop upkeep and prepare equipment for field install
-           •	Plumbing and Gas Fitting
-           •	Diesel Engine Service and Repair
-           •	Sewage Treatment
-           •	HVAC
-           •	Renovations, maintenance, customer service, electrical maintenance
+           * Set up, service, repair and maintain rental fleet
+           * Shop upkeep and prepare equipment for field install
+           * Plumbing and Gas Fitting
+           * Diesel Engine Service and Repair
+           * Sewage Treatment
+           * HVAC
+           * Renovations, maintenance, customer service, electrical maintenance
       - layout: left
         title: Lariagra Farms  Ltd, AB, Canada
         link: https://www.sunterrafarms.ca/
@@ -54,11 +54,11 @@ content:
         sub_title: Farrowing Technician
         caption: August 2021 – June 2023 
         description: | # this will include new lines to allow paragraphs
-           •	Provided agricultural livestock services such as artificial insemination, assisted pregnant sows and sorted new-borns
-           •	Recognized and treated certain livestock health problems
-           •	Maintained livestock performance records
-           •	Worked closely with all staff to meet monthly farrowing and mortality targets
-           •	Vaccinated animals according to farm protocols
+           * Provided agricultural livestock services such as artificial insemination, assisted pregnant sows and sorted new-borns
+           * Recognized and treated certain livestock health problems
+           * Maintained livestock performance records
+           * Worked closely with all staff to meet monthly farrowing and mortality targets
+           * Vaccinated animals according to farm protocols
       - layout: left
         title: Coles Farms Inc, NC, USA
         # link: boringcompany.com
