--- a/_config.yml
+++ b/_config.yml
@@ -123,10 +123,10 @@ content:
         link_text: mnau.edu.ua
         caption: September 2012 – August 2017
         sub_title: Bachelor’s Degree 
-        quote: >
+        quote: > Operation, Machinery and Equipment of Agribusiness
           
         description: | # this will include new lines to allow paragraphs
-          Operation, Machinery and Equipment of Agribusiness
+           Specialist in Operation, Machinery and Equipment of Agribusiness and able to solve unique tasks related to the maintenance and use of mechanized technologies of production, primary processing, storage and transportation of agricultural products. Expert management of mechanized technological processes and production units that provide technical support for an agro-industrial enterprise, with a proven record of elimination of failures.
 
   - title: ADDITIONAL SKILLS
     layout: text
