--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ instagram_username: lieiev
 # google_analytics: "UA-00000000-0"
 
 # About Section
-# about_title: ABOUT ME
+# about_title: About Me
 about_profile_image: images/123.jpg
 about_content: | # this will include new lines to allow paragraphs
   Interested in work that helps me improve my skills to better me for life in the future. I am a <mark>hands-on</mark> individual. I prefer a job that emphasizes my bilingual capabilities and strong work ethic. I am always willing to learn and excel in areas that I am not familiar with. My overall goal is <mark>to succeed</mark> in any position and to do so I will push myself beyond my limits.
