--- a/_config.yml
+++ b/_config.yml
@@ -129,10 +129,11 @@ content:
   - title: ADDITIONAL SKILLS
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - Driver Licence Class 5 (AB) and owns a vehicle
-      - 500 hours of  operating a telehandler MLT-X732 and MLT-526 & skid steer loader 226B 
-      - 300 hours of operating a tractor Arion 620c and Kubota M9540 & 3-ton manual truck
+      - DL Class 5 with Q endorsement (AB) and owns a vehicle
       - Standard First Aid Level C CPR certificate
+      - H2S Alive certificate
+      - 500 hours of  operating a telehandler MLT-X732 and MLT-526 & skid steer loader 226B
+      - 300 hours of operating a tractor Arion 620c and Kubota M9540 & 3-ton manual truck
       - Fluent in English, Russian and Ukrainian
       - Computer: MS Office (Word, Excel, PowerPoint), Internet and email
 
