--- a/_config.yml
+++ b/_config.yml
@@ -122,9 +122,9 @@ content:
         caption: September 2012 – August 2017
         sub_title: Bachelor’s Degree 
         quote: >
-          
-        description: | # this will include new lines to allow paragraphs
           Operation, Machinery and Equipment of Agribusiness
+        description: | # this will include new lines to allow paragraphs
+          Specialist in Operation, Machinery and Equipment of Agribusiness and able to solve unique tasks related to the maintenance and use of mechanized technologies of production, primary processing, storage and transportation of agricultural products. 
 
   - title: ADDITIONAL SKILLS
     layout: text
