--- a/_config.yml
+++ b/_config.yml
@@ -131,10 +131,10 @@ content:
   - title: ADDITIONAL SKILLS
     layout: text
     content: | # this will include new lines to allow paragraphs
-      - DL Class 5 with Q endorsement (AB) and owns a vehicle
+      - DL Class 3 with Q endorsement (AB) and owns a vehicle
       - Standard First Aid Level C CPR certificate
       - H2S Alive certificate
-      - 500 hours of  operating a telehandler MLT-X732 and MLT-526 & skid steer loader 226B
+      - 500 hours of  operating a telehandler MLT-X732 & MLT-526 & skid steer loader 226B
       - 300 hours of operating a tractor Arion 620c and Kubota M9540 & 3-ton manual truck
       - Fluent in English, Russian and Ukrainian
       - Computer: MS Office (Word, Excel, PowerPoint), Internet and email
