--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ instagram_username: lieiev
 # about_title: ABOUT ME # Title for the section
 about_profile_image: images/123.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Interested in work that helps me improve my skills to better me for life in the future. I am a <mark>hands-on</mark> individual. I prefer a job that emphasizes my bilingual capabilities and strong work ethic. I am always willing to learn and excel in areas that I am not familiar with. My overall goal is to succeed in <mark>any position</mark> and to do so I will push myself beyond my limits.
+  Motivated and mechanically inclined professional seeking an Industrial Mechanic (Millwright) <mark>Apprenticeship</mark> to apply my hands-on experience with mechanical systems, troubleshooting, and equipment maintenance. With a strong background in operating and servicing heavy machinery, I am eager <mark>to develop</mark> my skills in precision repair, assembly, and preventive maintenance within an industrial setting.
 content:
   - title: PROFESSIONAL EXPERIENCE # Title for the section
     layout: list # Type of content section (list/text)
