--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ content:
       - Bachelor’s Degree in Operation, Machinery and Equipment of Agribusiness 
       - DL Class 1 and owns a vehicle
       - Computer: MS Office (Word, Excel, PowerPoint), Internet and email
-      - Languages: English (Bilingual, CLB 6), Russian, and Ukrainian (native)
+      - Languages: English (CLB 6), Russian, and Ukrainian (native)
       - Standard First Aid Level C (CPR); H2S Alive; CSO; Fall protection
 
 
