--- a/_config.yml
+++ b/_config.yml
@@ -40,13 +40,13 @@ content:
         sub_title: Field Technician/Vac Truck Driver
         caption: July 2023 – Present
         description: | # this will include new lines to allow paragraphs
-           * Installed, repaired, and maintained plumbing systems, insulation, and heat traces for industrial and oilfield equipment
-           * Measured, cut, and assembled piping systems using hand and power tools
-           * Performed mechanical troubleshooting, including diagnosing and fixing generator (55KW, 60KW, JCB) and electrical system failures
-           * Conducted routine maintenance on pumps, breakers, and various rig-site equipment, ensuring optimal operation
-           * Worked in extreme weather conditions while adhering to strict safety procedures
-           * Operated and maintained a Class 3 VAC truck and trailer, gaining experience with hydraulics and fluid management systems
-           * Implemented preventive maintenance strategies, reducing equipment downtime
+           * Install, repair, and maintain plumbing systems, insulation, and heat traces for industrial and oilfield equipment
+           * Measure, cut, and assemble piping systems using hand and power tools
+           * Performe mechanical troubleshooting, including diagnosing and fixing generator (55KW, 60KW, JCB) and electrical system failures
+           * Conduct routine maintenance on pumps, breakers, and various rig-site equipment, ensuring optimal operation
+           * Work in extreme weather conditions while adhering to strict safety procedures
+           * Operate and maintain a Class 3 VAC truck and trailer, gaining experience with hydraulics and fluid management systems
+           * Implement preventive maintenance strategies, reducing equipment downtime
       - layout: left
         title: Lariagra Farms  Ltd, AB, Canada
         link: https://www.sunterrafarms.ca/
