--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ content:
         description: | # this will include new lines to allow paragraphs
            * Install, repair, and maintain plumbing systems, insulation, and heat traces for industrial and oilfield equipment
            * Measure, cut, and assemble piping systems using hand and power tools
-           * Performe mechanical troubleshooting, including diagnosing and fixing generator (55KW, 60KW, JCB) and electrical system failures
+           * Perform mechanical troubleshooting, including diagnosing and fixing generator (55KW, 60KW, JCB) and electrical system failures
            * Conduct routine maintenance on pumps, breakers, and various rig-site equipment, ensuring optimal operation
            * Work in extreme weather conditions while adhering to strict safety procedures
            * Operate and maintain a Class 3 VAC truck and trailer, gaining experience with hydraulics and fluid management systems
