--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ content:
            * Conduct routine maintenance on pumps, breakers, and various rig-site equipment, ensuring optimal operation
            * Work in extreme weather conditions while adhering to strict safety procedures
            * Operate and maintain a Class 3 VAC truck and trailer, gaining experience with hydraulics and fluid management systems
-           * Implement preventive maintenance strategies, reducing equipment downtime
+           * Skilled in replacing and installing full trailer wiring systems, reconnecting components, and inspecting, servicing, and replacing trailer bearings
       - layout: left
         title: Lariagra Farms  Ltd, AB, Canada
         link: https://www.sunterrafarms.ca/
