--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ content:
         title: Centurion Canada Rentals & Service​s, AB, Canada
         link: https://centurioncrs.com/
         link_text: centurioncrs.com
-        sub_title: Field Technician/Vac Truck Driver
+        sub_title: Federal Vac Driver/Field Technician
         caption: July 2023 – Present
         description: | # this will include new lines to allow paragraphs
            * Install, repair, and maintain plumbing systems, insulation, and heat traces for industrial and oilfield equipment
