--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ website:
 darkmode: false
 
 # Social links
-facebook_username: lieiev
-instagram_username: lieiev
+facebook_username: 
+instagram_username: 
 
 # Google Analytics and Tag Manager
 # Using more than one of these may cause issues with reporting
